--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.4",
-    "@tailwindcss/vite": "^4.1.3",
-    "@types/canvas-confetti": "^1.9.0",
-    "astro": "^5.13.5",
-    "tailwindcss": "^4.1.3"
+    "astro": "^5.13.5"
   }
 }
