--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.4",
-    "astro": "^5.13.5"
+    "astro": "^5.13.5",
+    "astro-icon": "^1.1.5"
+  },
+  "devDependencies": {
+    "@iconify-json/simple-icons": "^1.2.51",
+    "@iconify-json/skill-icons": "^1.2.3"
   }
 }
