--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,17 @@
 {
-  "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+    "extends": "astro/tsconfigs/strict",
+    "include": [".astro/types.d.ts", "**/*"],
+    "exclude": ["dist"],
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@layouts/*": ["src/layouts/*"],
+            "@components/*": ["src/components/*"],
+            "@styles/*": ["src/assets/styles/*"],
+            "@assets/*": ["src/assets/*"],
+            "@img/*": ["src/assets/img/*"],
+            "@utils/*": ["src/assets/utils/*"],
+            "@/*": ["src/*"]
+        }
+    }
 }
