PrettierをAstroに適用されるように設定

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,15 @@
     "singleQuote": false,
     "trailingComma": "es5",
     "endOfLine": "lf",
-    "insertPragma": false
+    "insertPragma": false,
+
+    "plugins": ["prettier-plugin-astro"],
+    "overrides": [
+        {
+            "files": "*.astro",
+            "options": {
+                "parser": "astro"
+            }
+        }
+    ]
 }
