--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@iconify-json/simple-icons": "^1.2.51",
-    "@iconify-json/skill-icons": "^1.2.3"
+    "@iconify-json/skill-icons": "^1.2.3",
+    "prettier": "3.6.2",
+    "prettier-plugin-astro": "0.14.1"
   }
 }
