スキルにビュー切替機能を追加

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro-icon": "^1.1.5"
   },
   "devDependencies": {
+    "@iconify-json/ic": "^1.2.4",
     "@iconify-json/simple-icons": "^1.2.51",
     "@iconify-json/skill-icons": "^1.2.3",
     "prettier": "3.6.2",
