--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "astro check && tsc --noEmit && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.4",
+    "@playform/compress": "^0.2.0",
+    "@playform/inline": "^0.1.2",
     "astro": "^5.13.5",
+    "astro-compressor": "^1.1.2",
     "astro-icon": "^1.1.5"
   },
   "devDependencies": {
