--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.4",
+    "@astrojs/sitemap": "^3.6.0",
     "@playform/compress": "^0.2.0",
-    "@playform/inline": "^0.1.2",
     "astro": "^5.13.5",
     "astro-compressor": "^1.1.2",
     "astro-icon": "^1.1.5"
